@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+
+<iati-activities>
+  <iati-activity>
+    <iati-identifier>12345</iati-identifier>
+    <description>xxx</description>
+    <crs-add>
+      <aidtype-flag code="XX" significance="true">XXX</aidtype-flag>
+    </crs-add>
+  </iati-activity>
+</iati-activities>
